--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mantine/core": "^7.15.2",
     "@mantine/hooks": "^7.15.2",
     "@mantine/modals": "^7.15.2",
+    "axios": "^1.7.9",
     "embla-carousel-react": "^7.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
